apps/staging/quote/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "quote-ingress"
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: global-issuer
spec:
  ingressClassName: apisix
  tls:
    - hosts:
        - quote.glegal.local
      secretName: quote-cert
  rules:
    - host: "quote.glegal.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quote
                port:
                  number: 80
